check_output.txt
warning: field `opening` is never read
  --> crates/bitcell-crypto/src/commitment.rs:33:5
   |
30 | pub struct PedersenCommitment {
   |            ------------------ field in this struct
...
33 |     opening: Option<Fr>,
   |     ^^^^^^^
   |
   = note: `PedersenCommitment` has a derived impl for the trait `Clone`, but this is intentionally ignored during dead code analysis
   = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

warning: `bitcell-crypto` (lib) generated 1 warning
warning: fields `listen_addr`, `block_tx`, and `tx_tx` are never read
  --> crates/bitcell-network/src/transport.rs:24:5
   |
23 | pub struct NetworkManager {
   |            -------------- fields in this struct
24 |     listen_addr: Multiaddr,
   |     ^^^^^^^^^^^
...
27 |     block_tx: mpsc::Sender<Block>,
   |     ^^^^^^^^
28 |     tx_tx: mpsc::Sender<Transaction>,
   |     ^^^^^
   |
   = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

warning: `bitcell-network` (lib) generated 1 warning
    Checking bitcell-node v0.1.0 (/Users/oli/code/BitCell/crates/bitcell-node)
warning: unused imports: `Query`, `Response`, and `http::StatusCode`
 --> crates/bitcell-node/src/rpc.rs:2:34
  |
2 |     extract::{State, Json, Path, Query},
  |                                  ^^^^^
...
5 |     response::{IntoResponse, Response},
  |                              ^^^^^^^^
6 |     http::StatusCode,
  |     ^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused imports: `Event as KademliaEvent`, `QueryResult`, `StreamProtocol`, `noise`, `self`, `tcp`, and `yamux`
 --> crates/bitcell-node/src/dht.rs:6:54
  |
6 |     kad::{store::MemoryStore, Behaviour as Kademlia, Event as KademliaEvent, QueryResult},
  |                                                      ^^^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^
7 |     swarm::{self, NetworkBehaviour},
  |             ^^^^
8 |     identify, noise, tcp, yamux, PeerId, Multiaddr, StreamProtocol,
  |               ^^^^^  ^^^  ^^^^^                     ^^^^^^^^^^^^^^

warning: unused import: `std::time::Duration`
  --> crates/bitcell-node/src/dht.rs:12:5
   |
12 | use std::time::Duration;
   |     ^^^^^^^^^^^^^^^^^^^

warning: unused variable: `state`
   --> crates/bitcell-node/src/rpc.rs:134:26
    |
134 | async fn eth_get_balance(state: &RpcState, params: Option<Value>) -> Result<Value, JsonRpcError> {
    |                          ^^^^^ help: if this is intentional, prefix it with an underscore: `_state`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `address_str`
   --> crates/bitcell-node/src/rpc.rs:155:9
    |
155 |     let address_str = args[0].as_str().ok_or(JsonRpcError {
    |         ^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_address_str`

error[E0277]: the trait bound `Hash256: LowerHex` is not satisfied
   --> crates/bitcell-node/src/rpc.rs:195:39
    |
195 |     let mock_hash = format!("0x{:x}", bitcell_crypto::Hash256::hash(tx_data.as_bytes()));
    |                                ----   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `LowerHex` is not implemented for `Hash256`
    |                                |
    |                                required by this formatting parameter
    |
    = help: the following other types implement trait `LowerHex`:
              &T
              &mut T
              BytesMut
              NonZero<T>
              Saturating<T>
              Wrapping<T>
              axum::body::Bytes
              base16ct::display::HexDisplay<'_>
            and 42 others
    = note: this error originates in the macro `$crate::__export::format_args` which comes from the expansion of the macro `format` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
   --> crates/bitcell-node/src/rpc.rs:399:58
    |
399 |     let miner_pk = bitcell_crypto::PublicKey::from_bytes(&miner_bytes).map_err(|_| JsonRpcError {
    |                    ------------------------------------- ^^^^^^^^^^^^ expected `[u8; 33]`, found `&Vec<u8>`
    |                    |
    |                    arguments to this function are incorrect
    |
    = note:  expected array `[u8; 33]`
            found reference `&Vec<u8>`
note: associated function defined here
   --> /Users/oli/code/BitCell/crates/bitcell-crypto/src/signature.rs:38:12
    |
 38 |     pub fn from_bytes(bytes: [u8; 33]) -> Result<Self> {
    |            ^^^^^^^^^^

warning: unused variable: `state`
   --> crates/bitcell-node/src/rpc.rs:459:36
    |
459 | async fn bitcell_get_battle_replay(state: &RpcState, params: Option<Value>) -> Result<Value, JsonRpcError> {
    |                                    ^^^^^ help: if this is intentional, prefix it with an underscore: `_state`

warning: unused variable: `tm`
   --> crates/bitcell-node/src/rpc.rs:517:17
    |
517 |     if let Some(tm) = &state.tournament_manager {
    |                 ^^ help: if this is intentional, prefix it with an underscore: `_tm`

warning: unused variable: `state`
   --> crates/bitcell-node/src/rpc.rs:535:34
    |
535 | async fn bitcell_get_miner_stats(state: &RpcState, params: Option<Value>) -> Result<Value, JsonRpcError> {
    |                                  ^^^^^ help: if this is intentional, prefix it with an underscore: `_state`

warning: unused variable: `params`
   --> crates/bitcell-node/src/rpc.rs:535:52
    |
535 | async fn bitcell_get_miner_stats(state: &RpcState, params: Option<Value>) -> Result<Value, JsonRpcError> {
    |                                                    ^^^^^^ help: if this is intentional, prefix it with an underscore: `_params`

warning: unused variable: `state`
   --> crates/bitcell-node/src/rpc.rs:557:11
    |
557 |     State(state): State<RpcState>,
    |           ^^^^^ help: if this is intentional, prefix it with an underscore: `_state`

warning: variable does not need to be mutable
   --> crates/bitcell-node/src/network.rs:331:17
    |
331 |             let mut writer_opt = {
    |                 ----^^^^^^^^^^
    |                 |
    |                 help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: variable does not need to be mutable
   --> crates/bitcell-node/src/network.rs:123:17
    |
123 |             let mut dht_manager = {
    |                 ----^^^^^^^^^^^
    |                 |
    |                 help: remove this `mut`

warning: unused import: `futures::prelude`
  --> crates/bitcell-node/src/dht.rs:11:5
   |
11 | use futures::prelude::*;
   |     ^^^^^^^^^^^^^^^^

Some errors have detailed explanations: E0277, E0308.
For more information about an error, try `rustc --explain E0277`.
warning: `bitcell-node` (lib) generated 13 warnings
error: could not compile `bitcell-node` (lib) due to 2 previous errors; 13 warnings emitted
